<resources>
    <string name="app_name">IceGpsTest</string>
    <string name="scan">开始扫描</string>
    <string name="s_n_offset">南北偏差</string>
    <string name="e_w_offset">东西偏差</string>
    <string name="start_distance">起点距离</string>
    <string name="end_distance">终点距离</string>
    <string name="offset_distance">偏移距离</string>
    <string name="meter">米</string>
    <string name="distance">距离</string>
    <string name="high_difference">高差</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="south">南</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="north">北</string>
    <string name="N">N</string>
    <string name="lat">lat</string>
    <string name="lon">lon</string>
    <string name="ele">ele</string>
    <string name="E">E</string>
    <string name="Z">Z</string>
    <string name="mileage">里程</string>
    <string name="descript">描述</string>
    <string name="coordinate_point">坐标点</string>
    <string name="loft_point">放样点</string>
    <string name="control_point">航线点</string>
    <string name="search">查找</string>
    <string name="setting">设置</string>
    <string name="batch">批量</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="create_new_file">新建放样文件</string>
    <string name="edit">编辑</string>
    <string name="insert_pre">在此点之前插入</string>
    <string name="insert_after">在此点之后插入</string>
    <string name="delete">删除</string>
    <string name="look">查看</string>
    <string name="open">打开</string>
    <string name="more">更多</string>
    <string name="point_name">点名</string>
    <string name="default_point_name">st1</string>
    <string name="add_lofting_point">添加放样点</string>
    <string name="lofting_point">放样</string>
    <string name="edit_hint_0">0.0000</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="add_fail">至少编辑一项其他内容才能添加!</string>
    <string name="time">时间</string>
</resources>
