<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:id="@+id/title_edit_or_delete"
              android:layout_height="50dp"
              android:layout_gravity="center"
              android:background="@color/tired_bg"
              android:orientation="horizontal">
    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/bg_color_fa"></View>
    <TextView
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/bg_color_fa"></View>
    <TextView
        android:id="@+id/insert_pre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/insert_pre"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/bg_color_fa"></View>
    <TextView
        android:id="@+id/insert_after"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/insert_after"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/bg_color_fa"></View>
    <TextView
        android:id="@+id/lofting_point"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lofting_point"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/bg_color_fa"></View>
    <TextView
        android:id="@+id/look"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/look"/>

</LinearLayout>
