<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@color/bg_color_a5">
   <TextView
       android:text="@string/coordinate_point"
       android:id="@+id/coordinate_point"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:gravity="center"
       android:textColor="@color/common_white"
       android:layout_height="match_parent"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        ></View>
    <TextView
        android:text="@string/loft_point"
       android:id="@+id/loft_point"
       android:layout_weight="1"
       android:layout_width="0dp"
        android:gravity="center"
        android:textColor="@color/common_white"
       android:layout_height="match_parent"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        ></View>
    <TextView
        android:text="@string/control_point"
       android:id="@+id/control_point"
       android:layout_weight="1"
       android:layout_width="0dp"
        android:gravity="center"
        android:textColor="@color/common_white"
       android:layout_height="match_parent"/>
</LinearLayout>
