<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:layout_margin="@dimen/margin5">


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent" />-->
        <TextView
            android:gravity="start"
            android:id="@+id/setting"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/pop_text_style"
            android:layout_margin="@dimen/margin10"
            android:text="@string/setting"/>
    <!--</LinearLayout>-->


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"/>


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent" />-->

        <TextView
            android:gravity="start"
            android:id="@+id/batch"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/pop_text_style"
            android:layout_margin="@dimen/margin10"
            android:text="@string/batch"/>
    <!--</LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"/>


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent" />-->

        <TextView
            android:gravity="start"
            android:id="@+id/add"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/pop_text_style"
            android:text="@string/add"/>
    <!--</LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"/>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->
    <!--<RadioButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent" />-->

    <TextView
        android:gravity="start"
        android:id="@+id/create_new_file"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/pop_text_style"
        android:text="@string/create_new_file"/>

</LinearLayout>