<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_white"
    >
   <include
       layout="@layout/public_title">
   </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:transcriptMode="normal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_name"
                    android:gravity="center"
                    android:text="@string/point_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_name"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:text="@string/default_point_name"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_lat"
                    android:gravity="center"
                    android:text="@string/lat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_lat"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:hint="@string/edit_hint_0"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_lon"
                    android:gravity="center"
                    android:text="@string/lon"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_lon"
                    android:hint="@string/edit_hint_0"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_ele"
                    android:gravity="center"
                    android:text="@string/ele"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_ele"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:hint="@string/edit_hint_0"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_descript"
                    android:gravity="center"
                    android:text="@string/descript"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fillViewport="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_descript"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin10">
                <TextView
                    android:id="@+id/point_mileage"
                    android:gravity="center"
                    android:text="@string/time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textSize18"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin10"/>
                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:scrollbars="vertical"
                    android:fillViewport="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/margin10"
                    android:textCursorDrawable="@null"
                    android:id="@+id/add_point_edit_mileage"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/black"
                    android:hint="@string/edit_hint_0"
                    android:drawableRight="@drawable/ic_edit_delete"
                    android:paddingRight="@dimen/margin10" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin10">
        <Button
            android:id="@+id/point_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/textSize18"
            android:text="@string/cancel"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin10"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/textSize18"
            android:paddingStart="@dimen/margin10"
            android:id="@+id/point_ok"
            android:textColor="@color/black"
            android:text="@string/ok"
            android:paddingRight="@dimen/margin10" />
    </LinearLayout>
</LinearLayout>
