<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sll"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_gravity="center">
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_alignParentTop="true"/>-->
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_alignParentLeft="true"/>-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/point_n"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lat"
            android:textSize="16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_gravity="center">
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_alignParentTop="true"/>-->
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_alignParentLeft="true"/>-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/point_e"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/lon"
        android:textSize="16sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center">
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentTop="true"/>-->
            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentLeft="true"/>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_alignParentBottom="true"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/point_z"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ele"
            android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center">
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentTop="true"/>-->
            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentLeft="true"/>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_alignParentBottom="true"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/point_mileage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mileage"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center">
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentTop="true"/>-->
            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:layout_alignParentLeft="true"/>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_alignParentBottom="true"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/point_descript"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/descript"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
